force-app/main/default/objects/Rupture_Disc__c/fields/Add_Integral_B_D_I_Integral_BDI_FLX_Sen__c.field-meta.xml
<CustomField>
    <fullName>Add_Integral_B_D_I_Integral_BDI_FLX_Sen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Integral B.D.I./Integral BDI-FLX Sen</label>
    <type>Checkbox</type>
</CustomField>