force-app/main/default/objects/Rupture_Disc__c/fields/Add_Integral_BDI_Integral_BDI_FLX_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Add_Integral_BDI_Integral_BDI_FLX_Sensor__c</fullName>
    <label>Add Integral BDI/Integral BDI-FLX Sensor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDI</fullName>
                <label>Integral BDI</label>
            </value>
            <value>
                <fullName>BDI-FLX</fullName>
                <label>Integral BDI-FLX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>