force-app/main/default/objects/Rupture_Disc__c/fields/Additional_Documents__c.field-meta.xml
<CustomField>
    <fullName>Additional_Documents__c</fullName>
    <label>Additional Documents</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>