force-app/main/default/objects/Rupture_Disc__c/fields/Animal_Derivative__c.field-meta.xml
<CustomField>
    <fullName>Animal_Derivative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Derivative</label>
    <type>Checkbox</type>
</CustomField>