force-app/main/default/objects/Rupture_Disc__c/fields/Application_type__c.field-meta.xml
<CustomField>
    <fullName>Application_type__c</fullName>
    <label>Application type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Sanitary</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
                <label>Transportation/Inter-modal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>