force-app/main/default/objects/Rupture_Disc__c/fields/ASME_BPE__c.field-meta.xml
<CustomField>
    <fullName>ASME_BPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASME BPE</label>
    <type>Checkbox</type>
</CustomField>