force-app/main/default/objects/Rupture_Disc__c/fields/ASME_Outlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>ASME_Outlet_Option_Code__c</fullName>
    <label>ASME Outlet Option Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>