force-app/main/default/objects/Rupture_Disc__c/fields/Assigned_RangeType__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RangeType__c</fullName>
    <label>Assigned RangeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>