force-app/main/default/objects/Rupture_Disc__c/fields/ASSYPARTEXISTING__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTEXISTING__c</fullName>
    <label>ASSYPARTEXISTING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>