force-app/main/default/objects/Rupture_Disc__c/fields/Atex_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Atex_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atex Certificate</label>
    <type>Checkbox</type>
</CustomField>