force-app/main/default/objects/Rupture_Disc__c/fields/Atmospheric_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Atmospheric_Pressure__c</fullName>
    <label>Atmospheric Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>