force-app/main/default/objects/Rupture_Disc__c/fields/Back_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Back_Pressure_Value__c</fullName>
    <label>Back Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>