force-app/main/default/objects/Rupture_Disc__c/fields/BMRCHECK__c.field-meta.xml
<CustomField>
    <fullName>BMRCHECK__c</fullName>
    <label>BMRCHECK</label>
    <precision>17</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>