force-app/main/default/objects/Rupture_Disc__c/fields/Burst_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Burst_Pressure__c</fullName>
    <label>Burst Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>