force-app/main/default/objects/Rupture_Disc__c/fields/Cable_Length__c.field-meta.xml
<CustomField>
    <fullName>Cable_Length__c</fullName>
    <label>Cable Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>