force-app/main/default/objects/Rupture_Disc__c/fields/Calculated_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Flow_Rate__c</fullName>
    <label>Calculated Flow Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>