force-app/main/default/objects/Rupture_Disc__c/fields/China_Manufacturing_License__c.field-meta.xml
<CustomField>
    <fullName>China_Manufacturing_License__c</fullName>
    <label>China Manufacturing License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoneCML</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>WSI</fullName>
                <label>Waive Source Inspection</label>
            </value>
            <value>
                <fullName>CUSTSI</fullName>
                <label>Customer Sourced Inspection</label>
            </value>
            <value>
                <fullName>CDCSI</fullName>
                <label>CDC Source Inspection</label>
            </value>
            <value>
                <fullName>Blank Value</fullName>
                <isActive>false</isActive>
                <label>Blank Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>