force-app/main/default/objects/Rupture_Disc__c/fields/Cleanings__c.field-meta.xml
<CustomField>
    <fullName>Cleanings__c</fullName>
    <label>Cleanings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Standard Cleaning</label>
            </value>
            <value>
                <fullName>C6</fullName>
                <label>Clean for OX per MP-4003</label>
            </value>
            <value>
                <fullName>C5</fullName>
                <label>Clean for LOX per MP-4003</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>Clean for Dry-Clorine Service per MP-4003</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>Clean with Acetone</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Clean with Blue Gold(R) Cleaner per MP-4003</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>Clean for Fluorine Service per SC12654</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>Marking/Packaging per SC10210</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>Cleaning/Marking/Packaging with Blue Gold(R) Cleaner per SC10214</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>Cleaning/Marking/Packaging for OX/LOX per SC10214</label>
            </value>
            <value>
                <fullName>M4</fullName>
                <label>Cleaning/Marking per SC14611</label>
            </value>
            <value>
                <fullName>M5</fullName>
                <label>Cleaning/Marking/Packaging per SC14611/SC10210</label>
            </value>
            <value>
                <fullName>C7</fullName>
                <isActive>false</isActive>
                <label>C7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>