force-app/main/default/objects/Rupture_Disc__c/fields/Comply_with_AD2000_Merkblat_A1__c.field-meta.xml
<CustomField>
    <fullName>Comply_with_AD2000_Merkblat_A1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comply with AD2000-Merkblat A1</label>
    <type>Checkbox</type>
</CustomField>