force-app/main/default/objects/Rupture_Disc__c/fields/Components_Flag__c.field-meta.xml
<CustomField>
    <fullName>Components_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Components Flag</label>
    <type>Checkbox</type>
</CustomField>