force-app/main/default/objects/Rupture_Disc__c/fields/Configurator_Configured_Part__c.field-meta.xml
<CustomField>
    <fullName>Configurator_Configured_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related RD Configurator Configured Part Record Type</description>
    <label>Rupture Disc Configured Part</label>
    <referenceTo>Rupture_Disc__c</referenceTo>
    <relationshipLabel>Rupture_Disc_Configurator_Configured_Part</relationshipLabel>
    <relationshipName>RuptureDisc</relationshipName>
    <type>Lookup</type>
</CustomField>