force-app/main/default/objects/Rupture_Disc__c/fields/Constrain_product_selection__c.field-meta.xml
<CustomField>
    <fullName>Constrain_product_selection__c</fullName>
    <label>Constrain product selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pressure</fullName>
            </value>
            <value>
                <fullName>Vacuum</fullName>
            </value>
            <value>
                <fullName>Pressure &amp; Vacuum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>