force-app/main/default/objects/Rupture_Disc__c/fields/constrain_product_selection_by_flow__c.field-meta.xml
<CustomField>
    <fullName>constrain_product_selection_by_flow__c</fullName>
    <label>constrain product selection by flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>