force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Density__c.field-meta.xml
<CustomField>
    <fullName>Converted_Density__c</fullName>
    <label>Converted Density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>