force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Density_Speci_Volume_SpeGravit__c.field-meta.xml
<CustomField>
    <fullName>Converted_Density_Speci_Volume_SpeGravit__c</fullName>
    <label>Converted Density/Speci Volume/SpeGravit</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>