force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Different_Temperature_Setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_Different_Temperature_Setting__c</fullName>
    <label>Converted (Different)Temperature Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>