force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Flow_rate__c.field-meta.xml
<CustomField>
    <fullName>Converted_Flow_rate__c</fullName>
    <label>Converted Flow rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>