force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Positive_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Converted_Positive_Pressure_Value__c</fullName>
    <label>Converted Positive Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>