force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Pressure_Setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_Pressure_Setting__c</fullName>
    <label>Converted Pressure Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>