force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Converted_Relieving_Temperature__c</fullName>
    <label>Converted Relieving Temperature</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>