force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Specific_Volume__c.field-meta.xml
<CustomField>
    <fullName>Converted_Specific_Volume__c</fullName>
    <label>Converted Specific Volume</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>