force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Stagnation_vapor_density__c.field-meta.xml
<CustomField>
    <fullName>Converted_Stagnation_vapor_density__c</fullName>
    <label>Converted Stagnation vapor density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>