force-app/main/default/objects/Rupture_Disc__c/fields/Converted_Viscosity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Viscosity__c</fullName>
    <label>Converted Viscosity</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>