force-app/main/default/objects/Rupture_Disc__c/fields/ConvertedDensity_at_90SaturationPressure__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDensity_at_90SaturationPressure__c</fullName>
    <label>ConvertedDensity at 90SaturationPressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>