force-app/main/default/objects/Rupture_Disc__c/fields/ConvVapor_pres_corres_to_stagnation_temp__c.field-meta.xml
<CustomField>
    <fullName>ConvVapor_pres_corres_to_stagnation_temp__c</fullName>
    <label>ConvVapor pres corres to stagnation temp</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>