force-app/main/default/objects/Rupture_Disc__c/fields/Coshh__c.field-meta.xml
<CustomField>
    <fullName>Coshh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coshh</label>
    <type>Checkbox</type>
</CustomField>