force-app/main/default/objects/Rupture_Disc__c/fields/Customer_Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_Requirements__c</fullName>
    <label>Customer Specific Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CS1</fullName>
                <label>No Metal Seal or Slot Covers</label>
            </value>
            <value>
                <fullName>CS2</fullName>
                <label>Sanitary Requirements per MP-8001</label>
            </value>
            <value>
                <fullName>CS3</fullName>
                <label>Manufacture per MP-8002</label>
            </value>
            <value>
                <fullName>CS4</fullName>
                <label>Mfg per MP-8002 and Sanitary Req per MP-8001</label>
            </value>
            <value>
                <fullName>CS5</fullName>
                <label>Sanitary Req per MP-8001 and No Metal Seals or Slot Covers</label>
            </value>
            <value>
                <fullName>Mfg per MP-8002</fullName>
                <isActive>false</isActive>
                <label>Mfg per MP-8002</label>
            </value>
            <value>
                <fullName>No metal seals or slot covers</fullName>
                <isActive>false</isActive>
                <label>No metal seals or slot covers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>