force-app/main/default/objects/Rupture_Disc__c/fields/Customer_Specified_Media__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specified_Media__c</fullName>
    <label>Customer Specified Media</label>
    <length>30</length>
    <type>Text</type>
</CustomField>