force-app/main/default/objects/Rupture_Disc__c/fields/Density_at_90_of_Saturation_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Density_at_90_of_Saturation_Pressure__c</fullName>
    <label>Density at 90% of Saturation Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>