force-app/main/default/objects/Rupture_Disc__c/fields/Density_Specific_Volume_Specific_Gravity__c.field-meta.xml
<CustomField>
    <fullName>Density_Specific_Volume_Specific_Gravity__c</fullName>
    <label>Density/Specific Volume/Specific Gravity</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>