force-app/main/default/objects/Rupture_Disc__c/fields/Density_SpecificVolume_SpcfcGravityUnits__c.field-meta.xml
<CustomField>
    <fullName>Density_SpecificVolume_SpcfcGravityUnits__c</fullName>
    <label>Density/SpecificVolume/SpcfcGravityUnits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lb/in3</fullName>
            </value>
            <value>
                <fullName>lb/ft3</fullName>
            </value>
            <value>
                <fullName>lb/gallon (U.S.)</fullName>
            </value>
            <value>
                <fullName>kg/m3</fullName>
            </value>
            <value>
                <fullName>kg/L</fullName>
            </value>
            <value>
                <fullName>lb/yd3</fullName>
            </value>
            <value>
                <fullName>lb/gallon (Imperial)</fullName>
            </value>
            <value>
                <fullName>ft3/lb</fullName>
            </value>
            <value>
                <fullName>m3/kg</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>